debhelper (7.3.0) UNRELEASED; urgency=low

  * Modular object oriented dh_auto_* buildsystem support,
    contributed by Modestas Vainius
    - dh_auto_* --builddirectory can now be used to specify a build
      directory to use for out of source building, for build systems
      that support it. Closes: #480577
    - dh_auto_* --buildsystem can now be used to override the autodetected
      build system, or force use of a third-party class.
    - dh_auto_* --list can be used to list available and selected build
      systems.
    - Adds support for cmake.
    - Historical dh_auto_* behavior should be preserved despite these
      large changes..

 -- Joey Hess <joeyh@debian.org>  Mon, 20 Apr 2009 16:26:08 -0400

debhelper (7.2.13) unstable; urgency=low

  * dh_auto_configure: Pass --skipdeps safely via PERL_AUTOINSTALL.
    Closes: #528235

 -- Joey Hess <joeyh@debian.org>  Thu, 14 May 2009 15:21:21 -0400

debhelper (7.2.12) unstable; urgency=low

  * dh_auto_configure: Revert --skipdeps change
    Closes: #528647, reopens: #528235

 -- Joey Hess <joeyh@debian.org>  Thu, 14 May 2009 14:15:26 -0400

debhelper (7.2.11) unstable; urgency=low

  * dh: Support --with addon,addon,...
    Closes: #528178
  * dh_auto_configure: Add --skipdeps when running Makefile.PL,
    to prevent Module::Install from trying to download dependencies.
    Closes: #528235
  * Support debian/foo.os files to suppliment previous debian/foo.arch
    file support. Closes: #494914
    (Thanks, Aurelien Jarno)

 -- Joey Hess <joeyh@debian.org>  Tue, 12 May 2009 14:52:18 -0400

debhelper (7.2.10) unstable; urgency=low

  * Close COMPAT_IN filehandle. Closes: #527464
  * dh_auto_configure: Clarify man page re adding configure
    parameters. Closes: #527256
  * dh_auto_configure: Pass packlist=0 when running Makefile.PL,
    in case it is a Build.PL passthru, to avoid it creating
    the .packlist file. Closes: #527990

 -- Joey Hess <joeyh@debian.org>  Sun, 10 May 2009 13:07:08 -0400
